# h-mesh

./: .gitignore  README.md  docker-compose.lab.yml  docker-compose.management-demo.yml  docker-compose.management.yml  docker-compose.pi-mqtt-pi.yml  pyproject.toml
config/examples/: ag01.dashboard-demo.env.example  ag01.pi-sim.env.example  bg02.pi-sim.env.example  channels.example.yaml  gateway-policy.example.yaml  site.env.example  site.lab.env.example
docker/dashboard/: Dockerfile
docker/integration/: Dockerfile  endpoint.py
docker/mosquitto/: mosquitto.conf
docs/: application-protocol.md  architecture.md  component-cloud.md  component-gateway.md  component-radio.md  component-sensor.md  deployment-architecture.md  gateway-acceptance-tests.md  gateway-service-design.md  log-archival-requirements.md  maintainability-and-commenting.md  management-dashboard.md  naming-and-configuration.md  operator-guide-broker.md  operator-guide-gateway.md  operator-guide-radio.md  operator-guide-sensor.md  overview.md  payload-transfer-decision.md  position-persistence.md  private-configuration.md  requirements-use-cases.md  sensor-control-schemas.md  telemetry-alerting.md  transport-constraints.md
src/h_mesh_gateway/: __init__.py  __main__.py  adapters.py  cli.py  clock_sensor.py  config.py  dashboard.py  health.py  interfaces.py  service.py  storage.py
tests/: test_adapters.py  test_cli.py  test_clock_sensor.py  test_config.py  test_dashboard.py  test_gateway_io.py  test_health.py  test_pi_mqtt_pi_docker.py  test_service.py  test_storage.py
(+1 files in other folders)
