[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "h-mesh-gateway"
version = "0.1.0"
description = "Phase 1 gateway service scaffold for h-mesh."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "paho-mqtt>=2.1,<3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
